unpackaged/main/default/objects/ARC_Market_Mapping__c/ARC_Market_Mapping__c.object-meta.xml
<CustomObject>
    <description>This used to store the mapping data respective of zip code</description>
    <label>ARC Market Mapping</label>
    <nameField>
        <displayFormat>MarketMap-{0000}</displayFormat>
        <label>ARC Market Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARCMarketMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>