unpackaged/main/default/objects/ARC_Market_Mapping__c/fields/Component_Economic_Area__c.field-meta.xml
<CustomField>
    <fullName>Component_Economic_Area__c</fullName>
    <label>Component Economic Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>