unpackaged/main/default/objects/ARC_Market_Mapping__c/fields/FIPS_Count__c.field-meta.xml
<CustomField>
    <fullName>FIPS_Count__c</fullName>
    <label>FIPS Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>