unpackaged/main/default/objects/ARC_Market_Mapping__c/fields/Primary_FIPS_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_FIPS_Code__c</fullName>
    <label>Primary FIPS Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>