unpackaged/main/default/objects/ARC_Market_Mapping__c/fields/USPS_City__c.field-meta.xml
<CustomField>
    <fullName>USPS_City__c</fullName>
    <label>USPS City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>