unpackaged/main/default/objects/ARC_Market_Mapping__c/fields/USPS_State__c.field-meta.xml
<CustomField>
    <fullName>USPS_State__c</fullName>
    <label>USPS State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>